# ROS2-A-car-with-trailer-

./: README.md
src/articubot_one/: CMakeLists.txt  setup.py
src/articubot_one/config/: view_bot.rviz
src/articubot_one/description/: robot.urdf.xacro
src/articubot_one/launch/: rsp.launch.py
src/articubot_one/src/: car_trailer_kinematics.py
